data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_257.wast
;; 8. **Test Description**: Integrate a sequence where a loop wraps around a `nop` and a conditionally branching `br` that should exit the loop based on passed iteration count.    - **Constraint**: Ensures that `nop` does not interfere with correct iteration counting.    - **Relation to Infinite Loops**: Checks if the loop stops correctly after specified iterations, without `nop` causing infinite loops.

(assert_invalid
  (module
    (func $loop-nop (param $iterations i32)
      (local $i i32)
      (local.set $i (i32.const 0))
      (block $exit
        (loop $loop
          (nop)
          (local.set $i (i32.add (local.get $i) (i32.const 1)))
          (br_if $exit (i32.ge_s (local.get $i) (local.get $iterations)))
          (br $loop)
        )
      )
    )
  )
  "type mismatch"
)